Fix size of titles on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -247,7 +247,7 @@ p.quote {
   line-height: 1.2;
 
   @include mobile {
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 
@@ -281,6 +281,11 @@ p.quote {
     font-weight: 700;
     font-size: 40px;
     line-height: 55px;
+
+    @include mobile {
+      font-size: 35px;
+      line-height: 1.2;
+    }
   }
 
   h3 {
@@ -308,8 +313,13 @@ p.quote {
     color: $secondary-color;
     padding-bottom: 15px;
     font-weight: 700;
-    font-size: 45px;
-    line-height: 65px;
+    font-size: 40px;
+    line-height: 55px;
+
+    @include mobile {
+      font-size: 35px;
+      line-height: 1.2;
+    }
   }
 
   p {
